src/objects/Client_Program_Conversion_Override__c.object
<CustomObject>
    <fields>
        <fullName>Do_Not_Combine__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Combine</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exchange_Rate__c</fullName>
        <label>Exchange Rate</label>
        <precision>7</precision>
        <required>true</required>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <referenceTo>Client_Program__c</referenceTo>
        <relationshipLabel>Conversion Overrides</relationshipLabel>
        <relationshipName>Client_Program_Conversion_Overrides</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>To_Plane__c</fullName>
        <label>To Plane</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Client Program Conversion Override</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Program Conversion Overrides</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>